# genQR

./: .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  README.md  de.haeckerfelix.genQR.json  gradio.doap  meson.build
.bzr/checkout/: dirstate
data/: app-menu.ui  de.haeckerfelix.genQR.appdata.xml.in  de.haeckerfelix.genQR.css  de.haeckerfelix.genQR.desktop.in  de.haeckerfelix.genQR.gresource.xml  genqr.desktop  genqr.gresource.xml  meson.build
data/ui/: app-menu.ui  main-window.ui  main-window.ui~  qr-code-box.ui  qr-code-box.ui~  qr-code-dialog.ui~  qr-code-window.ui~  server-notebook.ui~  svgbox.ui
debian/: changelog  control  copyright
po/: meson.build
src/: MainWindow.vala  QRCode.vala  QRCodeBox.vala  QRCodeWindow.vala  genQR.vala  gsvgtk-image.vala  meson.build
vapi/: libqrencode.vapi
